--- a/index.html
+++ b/index.html
@@ -189,9 +189,9 @@
       <aside class="hero-card reveal" style="transition-delay:.24s">
         <strong>Fast facts</strong>
         <div class="hero-badges">
-          <div class="mini-card"><div class="muted">Followers</div><div style="font-weight:800; font-size:1.35rem">850K+</div></div>
+          <div class="mini-card"><div class="muted">Followers</div><div style="font-weight:800; font-size:1.35rem">900K+</div></div>
           <div class="mini-card"><div class="muted">Videos</div><div style="font-weight:800; font-size:1.35rem">1,000+</div></div>
-          <div class="mini-card"><div class="muted">Brands</div><div style="font-weight:800; font-size:1.35rem">Deriv, Bybit</div></div>
+          <div class="mini-card"><div class="muted">Brands</div><div style="font-weight:800; font-size:1.35rem">Deriv, Binance, Bybit</div></div>
           <div class="mini-card"><div class="muted">Languages</div><div style="font-weight:800; font-size:1.35rem">English · Amharic</div></div>
         </div>
       </aside>
